--- a/Truence/index.html
+++ b/Truence/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Truence: Build Better</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
 </head>
 <body>
     <header>
-        <img class="nav-logo" src="transparent_truence.png">
+        <img class="nav-logo" src="White Transparent.png">
         <nav class="nav">
-            <ul>
-                <li>Services</li>
-                <li>Industries</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
+            <a>Services</a>
+            <a>Industries</a>
+            <a>About</a>
+            <a>Contact</a>
         </nav>
+        <a class="client-portal">Client Portal</a>
     </header>
     
 </body>
