--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      .carousel-item {
+        height: 40rem;
+        background: #525074;
+      }
+    </style>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -17,16 +23,17 @@
   </head>
 
   <body>
-    <header class="container">
+    <header class="font-weight-bold pl-md-5 pr-md-5">
       <nav
         id="header-nav"
-        class="navbar navbar-light bg-light navbar-expand-lg"
+        class="navbar navbar-light bg-light navbar-expand-lg txt-center"
       >
-        <a href="#" class="navbar-brand w-50 mr-5">
+        <a href="#" class="navbar-brand">
           <img
-            class="img-fluid w-75"
+            width="300"
             src="assets/images/TruenceTransparent.png"
             alt="Truence Software Consulting"
+            style="display: inline-block;"
           />
         </a>
         <button
@@ -45,7 +52,7 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarSupportedContent"
         >
-          <ul class="navbar-nav">
+          <ul class="navbar-nav text-center">
             <li class="nav-item active">
               <a class="nav-link" href="#"
                 ><u>Home</u> <span class="sr-only">(current)</span></a
@@ -70,64 +77,95 @@
       </nav>
     </header>
 
-    <section id="section-1" class="container d-flex align-text-center mt-5">
-      <div class="w-100" id="full-width">
-        <h1 class="display-4"><u class="underline">Let's buil</u>d together.</h1>
-        <p id="intro-para" class="w-75">
+    <section id="section-1" class="container-fluid">
+      <div class="row">
+        <div class="col pt-md-5 pl-3 pt-sm-3" style="margin: 2.5rem 3rem">
+            <h1 class="display-1"><u class="underline">Let's buil</u>d together.</h1>
+        <p id="intro-para">
           Truence Software consulting is here to help you bring your ideas to
-          life. Whether you’re a young start-up or a fortune 500, we’re here by
-          your side. Our team of professionals can build your reality, let’s get
+          life. Whether you’re an individual, a young start-up, or a fortune 500, we’re here by
+          your side. Our team of professionals can build you your reality, let’s get
           started!
         </p>
         <a href="#" class="btn btn-outline-danger">Get started</a>
         <a href="#" class="btn btn-outline-secondary">How it works</a>
-      </div>
+        </div>
+      <div class="col-md-6" style="margin: 2rem 2rem;">
       <img
-        class="img-fluid w-75"
+        class="img-fluid"
         src="assets/images/undraw_maker_launch_re_rq81.svg"
       />
+      </div>
+    </row>
     </section>
 
 
     <section id="section-2">
-      <h1>From ideas to reality it all begins here.</h1>
+      <h1>From ideas to reality it all begins <u class="underline">here</u>.</h1>
       <p>See what we can do for you.</p>
         <!-- Carousel -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <div id="myCarousel" class="carousel slide" date-ride="carousel">
+       <ol class="carousel-indicators">
+         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+         <li data-target="#myCarousel" data-slide-to="1"></li>
+         <li data-target="#myCarousel" data-slide-to="2"></li>
+         <li data-target="#myCarousel" data-slide-to="3"></li>
+       </ol>
 
-          </ol>
-          <div id="carousel" class="carousel-inner">
-            <div id="slide-1" class="carousel-item active">
-              <img class="d-block w-25" src="assets/images/undraw_responsive_re_e1nn.svg" alt="First slide">
-              <h2><u class="underline">Webs</u>ites</h2>
-              <p>Need a website? Our team is here to help you hand craft your perfect website. Whether it’s a landing page or a full-fledged webapp. Let’s make it happen together!</p>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container p-5">
+              <h1 class="pb-3"><span class="underline">Web Applications</span></h1>
+              <div class="container">
+              <p style="margin-bottom: 4rem;">Need a website? Our team is here to help you hand craft your perfect website.
+              Whether it’s a landing page or a full-fledged webapp. Let’s make it happen together!</p>
+              </div>
+              <img src="assets/images/undraw_building_blocks_re_rwls.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-25" src="assets/images/undraw_payments_re_77x0.svg" alt="Second slide">
-              <h2>Financial Technologies</h2>
-              <p>Need a fintech solution? Our very capable team is able to help you with your vision. Get in touch!  </p>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-25" src="assets/images/undraw_emails_re_cqen.svg" alt="Third slide">
-            </div>
-          <div class="carousel-item">
-            <img class="d-block w-25" src="..." alt="Fourth slide">
           </div>
+
+          <div class="carousel-item">
+            <div class="container p-5">
+              <h1 class="pb-3"><u class="underline">Financial Applications</u></h1>
+              <div class="container">
+              <p style="margin-bottom: 4rem;">Need a fintech solution? Our very capable team is able to help you with your vision. Get in touch!</p>
+              </div>
+              <img src="assets/images/undraw_mobile_pay_re_sjb8.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="container p-5">
+              <h1 class="pb-3"><u class="underline">Mobile & Desktop Applications</u></h1>
+              <div class="container">
+              <p style="margin-bottom: 4rem;">Our team is capable of bringing your app ideas to life, let’s make it happen! We’ll get you up and running no matter where you are in the process.</p>
+            </div>
+              <img src="assets/images/undraw_progressive_app_m-9-ms.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="container p-5">
+              <h1 class="pb-3"><u class="underline">Custom Software & Design</u></h1>
+              <div class="container">
+              <p style="margin-bottom: 4rem;">We understand your ideas come in many shapes and colors, let’s see what we can do for you! We’re here to take your journey with you, and we’re here every step of the way.</p>
+              </div>
+              <img src="assets/images/undraw_team_collaboration_re_ow29.svg" alt="Illustration of a monitor." width="450px" class="img-fluid">
+            </div>
+          </div>
+
         </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+
     </section>
 
     <script
