--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         id="header-nav"
         class="navbar navbar-light bg-light navbar-expand-lg txt-center"
       >
-        <a href="#" class="navbar-brand">
+        <a href="./index.html" class="navbar-brand">
           <img
             width="300"
             src="assets/images/TruenceTransparent.png"
@@ -59,18 +59,19 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="/Pages/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Consulting</a>
+              <a class="nav-link" href="/Pages/consulting.html">Consulting</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/Pages/about.html">About</a>
             </li>
             <li>
-              <button type="button" class="btn btn-outline-danger">
+              <a href="Pages/contact.html"><button type="button" class="btn btn-outline-danger">
                 Contact Us
               </button>
+              </a>
             </li>
           </ul>
         </div>
@@ -79,21 +80,22 @@
 
     <section id="section-1" class="container-fluid">
       <div class="row">
-        <div class="col pt-md-5 pl-3 pt-sm-3" style="margin: 2.5rem 3rem">
-            <h1 class="display-1"><u class="underline">Let's buil</u>d together.</h1>
+        <div class="col pt-md-5 pl-3 pt-sm-3" style="margin: 3rem 3rem">
+            <h1 class="display-2"><u class="underline">Let's buil</u>d together.</h1>
         <p id="intro-para">
           Truence Software consulting is here to help you bring your ideas to
           life. Whether you’re an individual, a young start-up, or a fortune 500, we’re here by
           your side. Our team of professionals can build you your reality, let’s get
           started!
         </p>
-        <a href="#" class="btn btn-outline-danger">Get started</a>
-        <a href="#" class="btn btn-outline-secondary">How it works</a>
+        <a href="/Pages/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
+        <a href="/Pages/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
         </div>
       <div class="col-md-6" style="margin: 2rem 2rem;">
       <img
         class="img-fluid"
         src="assets/images/undraw_maker_launch_re_rq81.svg"
+        alt="An illustration of a rocketship launching."
       />
       </div>
     </row>
@@ -167,6 +169,70 @@
 
 
     </section>
+
+    <section id="section-3" class="container font-weight-bold p-5">
+      <div class="row">
+      <div class="col pr-5">
+      <h1 class="display-5 mb-3">The Truence <u class="underline">Philosophy</u></h1>
+      <p>We aim to simplify the consultancy process. We’re here to bring your ideas to life at the best rates in the business. Our goal is to break down the barriers into software, design, and tech, one project at a time. Let’s work together to make your ideas a reality.</p>
+      <a href="Pages/about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
+      </div>
+      <img src="assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
+      class="img-fluid col-md-6">
+      </div>
+    </section>
+
+    <section id="section-4" class="container font-weight-bold p-5">
+      <div class="row">
+      <div class="col pr-5">
+      <h1 class="display-5 mb-3">How it works, beginning with <u class="underline">you</u></h1>
+      <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services check our consulting page.</p>
+      <a href="Pages/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
+      </div>
+      <img src="assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
+      class="img-fluid col-md-6">
+      </div>
+    </section>
+
+    <section id="section-5" class="container font-weight-bold text-center p-5 mb-5">
+      <h1 class="display-4">Let's get building!</h1>
+      <a href="/Pages/contact.html" class="btn btn-outline-danger">Contact Us</a>
+    </section>
+
+    <div id="sec-6-bg">
+    <section id="section-6" class="container font-weight-bold p-5">
+      <div class="row">
+      <div class="col pr-5">
+      <h1 class="display-5 mb-3">Interested in joining the team?</h1>
+      <p class="display-md-5">Head on over to our careers page to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
+      <a class="btn btn-outline-secondary font-weight-bold">Consulting</a>
+      </div>
+      <img src="assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
+      class="img-fluid col-md-6">
+      </div>
+    </section>
+    </div>
+
+    <footer class="text-white text-center">
+      <div class="d-flex align-items-center p-5 flex-column">
+      <a href="./index.html">
+        <img
+          width="300"
+          src="assets/images/transparent_truence.png"
+          alt="Truence Software Consulting"
+          style="display: inline-block;"
+        />
+      </a>
+      <div class="mt-3">
+        <a href="/Pages/services.html">Services</a>
+        <a href="/Pages/about.html">About</a>
+        <a href="/Pages/consulting.html">Consulting</a>
+        <a href="/Pages/contact.html">Contact</a>
+      </div>
+      </div>
+      <p class="m-0 p-1">Truence LLC &#169; 2022</p>
+
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
