Home page tweaks

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         id="header-nav"
         class="navbar navbar-light bg-light navbar-expand-lg txt-center"
       >
-        <a href="./index.html" class="navbar-brand">
+        <a id="header-logo-link" href="./index.html" class="navbar-brand">
           <img
+            id="header-logo"
             width="300"
             src="assets/images/TruenceTransparent.png"
             alt="Truence Software Consulting"
@@ -91,7 +92,7 @@
         <a href="/Pages/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
         <a href="/Pages/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
         </div>
-      <div class="col-md-6" style="margin: 2rem 2rem;">
+      <div class="col-md-6" style="margin: 6.5rem 1rem;">
       <img
         class="img-fluid"
         src="assets/images/undraw_maker_launch_re_rq81.svg"
@@ -178,7 +179,7 @@
       <a href="Pages/about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
       </div>
       <img src="assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
-      class="img-fluid col-md-6">
+      class="img-fluid col-md-6 mt-5">
       </div>
     </section>
 
@@ -190,7 +191,7 @@
       <a href="Pages/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
       </div>
       <img src="assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
-      class="img-fluid col-md-6">
+      class="img-fluid col-md-6 mt-5">
       </div>
     </section>
 
