Forgot to commit :(

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="row">
       <div class="col pr-5">
       <h1 class="display-5 mb-3">How it works, beginning with <u class="underline">you</u></h1>
-      <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services check our consulting page.</p>
+      <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services and processes check out our consulting page.</p>
       <a href="Pages/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
       </div>
       <img src="assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
