Slight design tweaks on homepage

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="section-1" class="container-fluid">
       <div class="row">
-        <div class="col pt-md-5 pl-3 pt-sm-3" style="margin: 3rem 3rem">
+        <div class="col pt-md-5 pl-3 pt-sm-3" style="margin: 5rem 2rem;">
             <h1 class="display-2"><u class="underline">Let's buil</u>d together.</h1>
         <p id="intro-para">
           Truence Software consulting is here to help you bring your ideas to
@@ -92,7 +92,7 @@
         <a href="/Pages/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
         <a href="/Pages/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
         </div>
-      <div class="col-md-6" style="margin: 6.5rem 1rem;">
+      <div class="col-md-6" style="margin: 6.5rem 1.5rem;">
       <img
         class="img-fluid"
         src="assets/images/undraw_maker_launch_re_rq81.svg"
@@ -104,7 +104,7 @@
 
 
     <section id="section-2">
-      <h1>From ideas to reality it all begins <u class="underline">here</u>.</h1>
+      <h1>From ideas to reality it all begins <span style="color: #FF6666;">here</span>.</h1>
       <p>See what we can do for you.</p>
         <!-- Carousel -->
       <div id="myCarousel" class="carousel slide" date-ride="carousel">
@@ -186,7 +186,7 @@
     <section id="section-4" class="container font-weight-bold p-5">
       <div class="row">
       <div class="col pr-5">
-      <h1 class="display-5 mb-3">How it works, beginning with <u class="underline">you</u></h1>
+      <h1 class="display-5 mb-3">How it works, beginning with <u class="underline"><span style="color: #FF6666">you</span></u></h1>
       <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services and processes check out our consulting page.</p>
       <a href="Pages/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
       </div>
@@ -206,7 +206,7 @@
       <div class="col pr-5">
       <h1 class="display-5 mb-3">Interested in joining the team?</h1>
       <p class="display-md-5">Head on over to our careers page to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
-      <a class="btn btn-outline-secondary font-weight-bold">Consulting</a>
+      <a href="Pages/about.html#careers" class="btn btn-outline-secondary font-weight-bold">Careers</a>
       </div>
       <img src="assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
       class="img-fluid col-md-6">
