--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="section-1" class="container-fluid">
       <div class="row">
-        <div class="col pt-md-5 pl-3 pt-sm-3" style="margin: 5rem 2rem;">
+        <div class="col pt-md-5 pl-3 pt-sm-3 mt-md-5 ml-md-5">
             <h1 class="display-2"><u class="underline">Let's buil</u>d together.</h1>
         <p id="intro-para">
           Truence Software consulting is here to help you bring your ideas to
@@ -92,8 +92,9 @@
         <a href="/Pages/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
         <a href="/Pages/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
         </div>
-      <div class="col-md-6" style="margin: 6.5rem 1.5rem;">
+      <div class="col-md-6 mb-sm-5 mt-sm-5">
       <img
+        id="hero-image"
         class="img-fluid"
         src="assets/images/undraw_maker_launch_re_rq81.svg"
         alt="An illustration of a rocketship launching."
@@ -123,7 +124,7 @@
               <p style="margin-bottom: 4rem;">Need a website? Our team is here to help you hand craft your perfect website.
               Whether it’s a landing page or a full-fledged webapp. Let’s make it happen together!</p>
               </div>
-              <img src="assets/images/undraw_building_blocks_re_rwls.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
+              <img id="slide-1-img" src="assets/images/undraw_building_blocks_re_rwls.svg" alt="Illustration of a monitor." width="400px" class="img-fluid">
             </div>
           </div>
 
