--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         >
           <ul class="navbar-nav text-center">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="/index.html"
                 ><u>Home</u> <span class="sr-only">(current)</span></a
               >
             </li>
@@ -78,6 +78,7 @@
         </div>
       </nav>
     </header>
+    <main>
 
     <section id="section-1" class="container-fluid">
       <div class="row">
@@ -214,6 +215,8 @@
       </div>
     </section>
     </div>
+
+    </main>
 
     <footer class="text-white text-center">
       <div class="d-flex align-items-center p-5 flex-column">
