Reference links on services page

--- a/Pages/services.html
+++ b/Pages/services.html
@@ -29,7 +29,7 @@
       id="header-nav"
       class="navbar navbar-light bg-light navbar-expand-lg txt-center"
     >
-      <a id="header-logo-link" href="../index.html" class="navbar-brand">
+      <a id="header-logo-link" href="/index.html" class="navbar-brand">
         <img
           id="header-logo"
           width="300"
@@ -56,7 +56,7 @@
       >
         <ul class="navbar-nav text-center">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/Pages/services.html"
@@ -70,7 +70,7 @@
             <a class="nav-link" href="/Pages/about.html">About</a>
           </li>
           <li>
-            <a href="Pages/contact.html"><button type="button" class="btn btn-outline-danger">
+            <a href="/Pages/contact.html"><button type="button" class="btn btn-outline-danger">
               Contact Us
             </button>
             </a>
@@ -173,9 +173,9 @@
      </section>
 
      <section class="p-5">
-       <div class="container text-center p-5 bg-dark text-white">
-         <p>Didn't see what you need listed here? Contact us anyways and we'll adapt to meet your needs.</p>
-         <a class="btn btn-outline-secondary">Contact Us</a>
+       <div class="container text-center p-4 bg-dark text-white">
+         <p class="p-5 font-weight-bold">Didn't see what you need listed here? Contact us anyways and we'll adapt to meet your needs.</p>
+         <a href="/Pages/contact.html" class="btn btn-outline-light">Contact Us</a>
        </div>
      </section>
   </main>
