--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Pages/services.html">Services</a>
+              <a class="nav-link" href="/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Pages/consulting.html">Consulting</a>
+              <a class="nav-link" href="/consulting.html">Consulting</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Pages/about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li>
-              <a href="Pages/contact.html"><button type="button" class="btn btn-outline-danger">
+              <a href="/contact.html"><button type="button" class="btn btn-outline-danger">
                 Contact Us
               </button>
               </a>
@@ -90,8 +90,8 @@
           your side. Our team of professionals can build you your reality, let’s get
           started!
         </p>
-        <a href="/Pages/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
-        <a href="/Pages/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
+        <a href="/contact.html" class="btn btn-outline-danger font-weight-bold">Get started</a>
+        <a href="/consulting.html" class="btn btn-outline-secondary font-weight-bold">How it works</a>
         </div>
       <div class="col-md-6 mb-sm-5 mt-sm-5">
       <img
@@ -106,10 +106,10 @@
 
 
     <section id="section-2">
-      <h1>From ideas to reality it all begins <span style="color: #FF6666;">here</span>.</h1>
-      <p>See what we can do for you.</p>
+      <h1 class="mb-0">From ideas to reality it all begins <span style="color: #FF6666;">here</span>.</h1>
+      <a href="/services.html">See what we can do for you.</a>
         <!-- Carousel -->
-      <div id="myCarousel" class="carousel slide" date-ride="carousel">
+      <div id="myCarousel" class="carousel slide mt-3" date-ride="carousel">
        <ol class="carousel-indicators">
          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
          <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -178,9 +178,9 @@
       <div class="col pr-5">
       <h1 class="display-5 mb-3">The Truence <u class="underline">Philosophy</u></h1>
       <p>We aim to simplify the consultancy process. We’re here to bring your ideas to life at the best rates in the business. Our goal is to break down the barriers into software, design, and tech, one project at a time. Let’s work together to make your ideas a reality.</p>
-      <a href="Pages/about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
+      <a href="/about.html" class="btn btn-outline-danger font-weight-bold">About Us</a>
       </div>
-      <img src="assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
+      <img src="/assets/images/undraw_getting_coffee_re_f2do.svg" alt="An illustration of two people sitting at a table drinking coffee."
       class="img-fluid col-md-6 mt-5">
       </div>
     </section>
@@ -190,16 +190,16 @@
       <div class="col pr-5">
       <h1 class="display-5 mb-3">How it works, beginning with <u class="underline"><span style="color: #FF6666">you</span></u></h1>
       <p class="display-md-5">Truence is a people-first company. We’re here to assist you in creating your vision. This begins with an initial consultation meeting where we go over procedures, budget, timelines, and goals. From there we’ll update you during every step of the process so you’re never wondering how far along we are. We’ll split up your project into segments that allow you to give feedback and work alongside us. It all begins with you. To learn more about our services and processes check out our consulting page.</p>
-      <a href="Pages/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
+      <a href="/consulting.html" class="btn btn-outline-danger font-weight-bold">Consulting</a>
       </div>
-      <img src="assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
+      <img src="/assets/images/undraw_scrum_board_re_wk7v.svg" alt="An illustration of two people standing in front of a board with notes on it."
       class="img-fluid col-md-6 mt-5">
       </div>
     </section>
 
     <section id="section-5" class="container font-weight-bold text-center p-5 mb-5">
       <h1 class="display-4">Let's get building!</h1>
-      <a href="/Pages/contact.html" class="btn btn-outline-danger">Contact Us</a>
+      <a href="/contact.html" class="btn btn-outline-danger">Contact Us</a>
     </section>
 
     <div id="sec-6-bg">
@@ -208,9 +208,9 @@
       <div class="col pr-5">
       <h1 class="display-5 mb-3">Interested in joining the team?</h1>
       <p class="display-md-5">Head on over to our careers page to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
-      <a href="Pages/about.html#careers" class="btn btn-outline-secondary font-weight-bold">Careers</a>
+      <a href="/about.html#careers" class="btn btn-outline-secondary font-weight-bold">Careers</a>
       </div>
-      <img src="assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
+      <img src="/assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
       class="img-fluid col-md-6">
       </div>
     </section>
@@ -229,10 +229,10 @@
         />
       </a>
       <div class="mt-3">
-        <a href="/Pages/services.html">Services</a>
-        <a href="/Pages/about.html">About</a>
-        <a href="/Pages/consulting.html">Consulting</a>
-        <a href="/Pages/contact.html">Contact</a>
+        <a href="/services.html">Services</a>
+        <a href="/about.html">About</a>
+        <a href="/consulting.html">Consulting</a>
+        <a href="/contact.html">Contact</a>
       </div>
       </div>
       <p class="m-0 p-1">Truence LLC &#169; 2022</p>
