--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500;700&display=swap" rel="stylesheet"> 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Truence | Home</title>
+    <title>Truence | Services</title>
   </head>
 
 <body>
@@ -59,18 +59,17 @@
             <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/Pages/services.html"
-              ><u>Services</u></a
-              > <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/services.html"
+              ><u>Services</u> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Pages/consulting.html">Consulting</a>
+            <a class="nav-link" href="/consulting.html">Consulting</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Pages/about.html">About</a>
+            <a class="nav-link" href="/about.html">About</a>
           </li>
           <li>
-            <a href="/Pages/contact.html"><button type="button" class="btn btn-outline-danger">
+            <a href="/contact.html"><button type="button" class="btn btn-outline-danger">
               Contact Us
             </button>
             </a>
@@ -173,9 +172,9 @@
      </section>
 
      <section class="p-5">
-       <div class="container text-center p-4 bg-dark text-white">
-         <p class="p-5 font-weight-bold">Didn't see what you need listed here? Contact us anyways and we'll adapt to meet your needs.</p>
-         <a href="/Pages/contact.html" class="btn btn-outline-light">Contact Us</a>
+       <div class="container text-center p-5 bg-dark text-white">
+         <p class="font-weight-bold">Didn't see what you need listed here? Contact us anyways and we'll adapt to meet your needs.</p>
+         <a href="/contact.html" class="btn btn-outline-light">Contact Us</a>
        </div>
      </section>
   </main>
@@ -191,10 +190,10 @@
       />
     </a>
     <div class="mt-3">
-      <a href="/Pages/services.html">Services</a>
-      <a href="/Pages/about.html">About</a>
-      <a href="/Pages/consulting.html">Consulting</a>
-      <a href="/Pages/contact.html">Contact</a>
+      <a href="/services.html">Services</a>
+      <a href="/about.html">About</a>
+      <a href="/consulting.html">Consulting</a>
+      <a href="/contact.html">Contact</a>
     </div>
     </div>
     <p class="m-0 p-1">Truence LLC &#169; 2022</p>
@@ -218,3 +217,5 @@
   crossorigin="anonymous"
 ></script>
 </body>
+
+</html>
