--- a/consulting.html
+++ b/consulting.html
@@ -7,6 +7,7 @@
         background: #3f3f46;
       }
     </style>
+    <link rel="shortcut icon" href="./assets/images/Truence_favicon.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
