--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
         background: #525074;
       }
     </style>
+    <link rel="shortcut icon" href="./assets/images/Truence_favicon.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
