--- a/consulting.html
+++ b/consulting.html
@@ -81,12 +81,12 @@
 
 
   <main>
-    <section class="container text-center pt-5 font-weight-bold">
+    <section class="container text-center pt-5">
         <div class="container">
           <img src="./assets/images/undraw_building_re_xfcm.svg" alt="Illustration of a building."
           class="img-fluid" width="500">
         </div>
-      <h1 class="display-4 mb-5"><u class="underline">Truence Consulting</u></h1>
+      <h1 class="display-4 mb-5 font-weight-bold"><u class="underline">Truence Consulting</u></h1>
       <p class="mt-5 mb-5 lead">Truence software consulting is designed to seamlessly integrate into your business operations. We cover nearly every sector of industry. Any software or design solution you may need, we can get you there with our talented team. We work alongside and around your team and technology stack, insuring smooth operations. We care about your business and in order to generate a return on your investment, our team and representatives are here to determine the best strategies and implementations we can create for you.</p>
     </section>
 
