--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@
         <img src="./assets/images/undraw_programming_re_kg9v.svg" alt="Illustration of a programmer in front of two monitors."
         class="img-fluid" width="500">
       </div>
-      <h1 class="display-4 mb-3 mt-5"><u class="underline">Our Services</u></h1>
+      <h1 class="display-4 mb-3 mt-5 font-weight-bold"><u class="underline">Our Services</u></h1>
       <p class="mb-5 lead font-weight-bold">Truence covers an expansive range of technologies and design to provide the smoothest journey from inception to deployment. Truence and our talented team is here to support you with any individual or business needs. Whatever you need, at any stage of a project lifecycle, we've got you covered.</p>
     </section>
 
