--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section id="section-1" class="container-fluid">
       <div class="row">
         <div class="col pt-md-5 pl-3 pt-sm-3 mt-md-5 ml-md-5">
-            <h1 class="display-2"><u class="underline">Let's buil</u>d together.</h1>
+            <h1 class="display-2 font-weight-bold"><u class="underline">Let's buil</u>d together.</h1>
         <p id="intro-para">
           Truence Software consulting is here to help you bring your ideas to
           life. Whether you’re an individual, a young start-up, or a fortune 500, we’re here by
