--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="row">
       <div class="col pr-5">
       <h1 class="display-5 mb-3">Interested in joining the team?</h1>
-      <p class="display-md-5">Contact us if to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
+      <p class="display-md-5">Contact us to see our open positions, see what we have to offer you and how we can create amazing things together!</p>
       <a href="./contact.html" class="btn btn-outline-light font-weight-bold">Careers</a>
       </div>
       <img src="./assets/images/undraw_developer_activity_re_39tg.svg" alt="An illustration of a man with a laptop sitting at a desk."
